<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crimson</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="usernamehint">Username</string>
    <string name="passwordhint">Password</string>
    <string name="login">Log In</string>
    <string name="accountcreate">Create an account</string>
    <string name="signup">Sign Up</string>
    <string name="emailhint">E-mail</string>
    <string name="address">Address</string>
    <string name="choosepic">Choose a picture...</string>
    <string name="editprofile">Edit Profile</string>
    <string name="editemail">E-mail</string>
    <string name="editaddress">Address</string>
    <string name="sumbitchanges">Submit Changes</string>
    <string name="changeprofilepic">Change Profile Pic</string>
    <string name="PlaceName">placeName</string>
    <string name="checkindialog">Check in at this place?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ambush">Ambush</string>
    <string name="forage">Forage</string>


    <string name="ambushattack">Attack this forager?</string>


    <string name="deleteAccount">Delete Account</string>
    <string name="accountID"></string>
    <string name="deleteAccountDialog">Are you sure you want to delete your account? This cannot be undone!</string>
    <string name="ownedArtifactsString">You own following artifacts. Tap to to forgo.</string>
    <string name="availableArtifactsString">Following artifacts are found. Tap to acquire.</string>
    <string name="deleteArtifact">Do you really want to give up this artifact?</string>
    <string name="wantArtifact">Do you want to acquire this artifact?</string>
    <string name="artifactsOwnedByUser">Artifacts Owned:</string>
    <string name="checkArtifacts">Check for Artifacts</string>

    <string name="battledialog"> has attacked you.Fight back?</string>


    <string name="logout">Logout</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="clan">Clan</string>
    <string name="displayClan">Clan</string>
    <string name="winRecord">Wins</string>
    <string name="lossRecord">Losses</string>
    <string name="editClan">Clan</string>
    <string name="EmailText">E-mail:</string>
    <string name="postaladdresstext">Address:</string>
    <string name="healingSpot"></string>




    <string name="clanText">Clan</string>
</resources>
