<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:onClick="changeprofilepic"
            android:text="@string/changeprofilepic" />

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="0.25"
            android:src="@drawable/abs__ab_bottom_solid_dark_holo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="11.52"
            android:text="@string/EmailText" />

        <EditText
            android:id="@+id/emailaddressIn"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editemail"
            android:inputType="text|textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/postaladdresstext" />

        <EditText
            android:id="@+id/postaladdressIn"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editaddress"
            android:inputType="textPostalAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="Clan: " />

        <EditText
            android:id="@+id/editClan"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.27"
            android:ems="10"
            android:hint="@string/editClan" >
            />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="submitchanges"
        android:text="@string/sumbitchanges" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deleteAccount"
        android:text="@string/deleteAccount" />

</LinearLayout>